c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/cast_to_array_type_2.c
int main(void)
{
    long arr[10];
    // casts to array type are illegal
    return (int *[10])arr;
}